re #35 improve geometry compilation on windows
One function in Track.cpp disabled

Still got linking errors

--- a/Code/Mantid/Geometry/Geometry.vcproj
+++ b/Code/Mantid/Geometry/Geometry.vcproj
@@ -55,6 +55,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalLibraryDirectories="../../Third_Party/lib/win32"
 				GenerateDebugInformation="true"
 			/>
 			<Tool
@@ -152,6 +153,22 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\src\Acomp.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\Algebra.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Deprecated\src\AuxException.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\BnId.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\CompAssembly.cpp"
 				>
 			</File>
@@ -160,7 +177,39 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\Cone.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\Cylinder.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\Detector.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\General.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\Line.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\LineIntersectVisit.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\Material.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Deprecated\src\mathSupport.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Deprecated\src\Matrix.cpp"
 				>
 			</File>
 			<File
@@ -168,11 +217,107 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\Object.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\Plane.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\Quat.cpp"
 				>
 			</File>
 			<File
+				RelativePath=".\Deprecated\src\regexSupport.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Deprecated\src\RotCounter.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\RuleItems.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\Rules.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\Sphere.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\Surface.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\surfaceFactory.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\Torus.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\Track.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\Triple.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\V3D.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Deprecated\src\Vec3D.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Deprecated\src\XMLattribute.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Deprecated\src\XMLcollect.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Deprecated\src\XMLcomment.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Deprecated\src\XMLcomp.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Deprecated\src\XMLgrid.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Deprecated\src\XMLgridSupport.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Deprecated\src\XMLgroup.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Deprecated\src\XMLnamespace.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Deprecated\src\XMLobject.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Deprecated\src\XMLread.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Deprecated\src\XMLvector.cpp"
 				>
 			</File>
 		</Filter>
@@ -190,11 +335,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\AuxException.h"
+				RelativePath=".\auxinc\AuxException.h"
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\AuxException.h"
+				RelativePath=".\Deprecated\inc\AuxException.h"
 				>
 			</File>
 			<File
@@ -246,11 +391,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\IndexIterator.h"
+				RelativePath=".\auxinc\IndexIterator.h"
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\IndexIterator.h"
+				RelativePath=".\Deprecated\inc\IndexIterator.h"
 				>
 			</File>
 			<File
@@ -326,11 +471,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\RotCounter.h"
+				RelativePath=".\auxinc\RotCounter.h"
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\RotCounter.h"
+				RelativePath=".\Deprecated\inc\RotCounter.h"
 				>
 			</File>
 			<File
@@ -382,11 +527,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\XMLattribute.h"
+				RelativePath=".\auxinc\XMLattribute.h"
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\XMLattribute.h"
+				RelativePath=".\Deprecated\inc\XMLattribute.h"
 				>
 			</File>
 			<File
@@ -398,19 +543,19 @@
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\XMLcomment.h"
-				>
-			</File>
-			<File
 				RelativePath=".\auxinc\XMLcomment.h"
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\XMLcomp.h"
+				RelativePath=".\Deprecated\inc\XMLcomment.h"
 				>
 			</File>
 			<File
 				RelativePath=".\Deprecated\inc\XMLcomp.h"
+				>
+			</File>
+			<File
+				RelativePath=".\auxinc\XMLcomp.h"
 				>
 			</File>
 			<File
@@ -422,15 +567,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\XMLgridSupport.h"
-				>
-			</File>
-			<File
 				RelativePath=".\Deprecated\inc\XMLgridSupport.h"
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\XMLgroup.h"
+				RelativePath=".\auxinc\XMLgridSupport.h"
 				>
 			</File>
 			<File
@@ -438,7 +579,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\XMLindex.h"
+				RelativePath=".\Deprecated\inc\XMLgroup.h"
 				>
 			</File>
 			<File
@@ -446,11 +587,15 @@
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\XMLnamespace.h"
+				RelativePath=".\auxinc\XMLindex.h"
 				>
 			</File>
 			<File
 				RelativePath=".\Deprecated\inc\XMLnamespace.h"
+				>
+			</File>
+			<File
+				RelativePath=".\auxinc\XMLnamespace.h"
 				>
 			</File>
 			<File
@@ -462,15 +607,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\XMLpath.h"
-				>
-			</File>
-			<File
 				RelativePath=".\Deprecated\inc\XMLpath.h"
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\XMLread.h"
+				RelativePath=".\auxinc\XMLpath.h"
 				>
 			</File>
 			<File
@@ -478,15 +619,19 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Deprecated\inc\XMLread.h"
+				>
+			</File>
+			<File
 				RelativePath=".\auxinc\XMLsupport.h"
 				>
 			</File>
 			<File
-				RelativePath=".\Deprecated\inc\XMLvector.h"
+				RelativePath=".\auxinc\XMLvector.h"
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\XMLvector.h"
+				RelativePath=".\Deprecated\inc\XMLvector.h"
 				>
 			</File>
 		</Filter>
