Added SConstruct for each part of Mantid. Refs #31

--- a/Code/Mantid/DataObjects/SConstruct
+++ b/Code/Mantid/DataObjects/SConstruct
@@ -1,4 +1,4 @@
-#For MantidAlgorithms
+#For MantidDataObjects
 
 import os
 import platform
@@ -107,4 +107,4 @@ env = Environment(CPPPATH=cppPaths)
 env.Append( CCFLAGS = cflags)
 
 #BUILD CODE
-env.SharedLibrary('lib/MantidAlgorithms', listCpps, LIBS=[ ], LIBPATH=[ ])
+env.SharedLibrary('lib/MantidDataObjects', listCpps, LIBS=[ ], LIBPATH=[ ])
