re #55 Added validators for properties

--- a/Code/Mantid/API/API.vcproj
+++ b/Code/Mantid/API/API.vcproj
@@ -177,6 +177,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\Sample.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\Workspace.cpp"
 				>
 			</File>
