--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -157,6 +157,10 @@
 				RelativePath=".\src\SimpleIntegration.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\src\TOFtoWavelength.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -164,7 +168,15 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\inc\MantidAlgorithms\PhysicalConstants.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidAlgorithms\SimpleIntegration.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\TOFtoWavelength.h"
 				>
 			</File>
 		</Filter>
